Revert "SONAR-4438 "More actions" drop list does not fit in the issue details modal window"
This reverts commit e2572f904de475677b13ae5fc83b0dbb93f0554c.

--- a/sonar-server/src/main/webapp/stylesheets/style.css
+++ b/sonar-server/src/main/webapp/stylesheets/style.css
@@ -2116,7 +2116,7 @@ table.nowrap td, td.nowrap, th.nowrap {
   max-width: 220px;
   min-width: 160px;
   padding: 0;
-  position: fixed;
+  position: absolute;
   z-index: 1000;
 }
 
